--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -164,7 +164,7 @@
 						<a class="collapse-item" th:href="@{/plant/process}">공정관리</a>
 						<a class="collapse-item" th:href="@{/inventory/material}">자재(부품) 정보</a>
 						<a class="collapse-item" th:href="@{/inventory/item}">제품(완/반) 정보</a>
-
+						<a class="collapse-item" th:href="@{/inventory/ware}">창고 정보</a>
 					</div>
 				</div></li>
 
@@ -244,7 +244,7 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">구매 관리:</h6>
 						<a class="collapse-item" th:href="@{/purchase/purchaseOrder}">발주 검사</a> 
-						<a class="collapse-item" th:href="@{/purchase/goods}">입고 검사</a>
+						<a class="collapse-item" th:href="@{/purchase/goods}">입고 관리</a>
 							
 
 					</div>
