--- a/erp_mes/src/main/resources/templates/inventory/material_list.html
+++ b/erp_mes/src/main/resources/templates/inventory/material_list.html
@@ -43,17 +43,6 @@
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">자재 목록</h6>
-                <div>
-                    <button class="btn btn-success btn-sm" onclick="showAddRow()">
-                        <i class="fas fa-plus"></i> 추가
-                    </button>
-                    <button class="btn btn-warning btn-sm" onclick="toggleEditMode()">
-                        <i class="fas fa-edit"></i> 수정
-                    </button>
-                    <button class="btn btn-danger btn-sm" onclick="deleteSelected()">
-                        <i class="fas fa-trash"></i> 삭제
-                    </button>
-                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -65,10 +54,10 @@
 						        </th>
 						        <th width="10%">자재코드</th>
 						        <th width="15%">자재명</th>
-						        <th width="10%">자재유형(부품 고정)</th> 
+						        <th width="12%">자재유형(부품 고정)</th> 
 						        <th width="6%">단위</th>
 						        <th width="20%">자재 사양</th>
-						        <th width="10%">등록자</th>
+						        <th width="10%">등록자(수정)</th>
 						        <th width="10%">등록일</th>
 						    </tr>
 						</thead>
