--- a/erp_mes/src/main/resources/templates/qc/qcinfo.html
+++ b/erp_mes/src/main/resources/templates/qc/qcinfo.html
@@ -1,234 +1,235 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layouts/layout}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 
 <head>
-<meta charset="UTF-8">
-<title>품질 관리</title>
+    <meta charset="UTF-8">
+    <title>품질 관리</title>
 </head>
 
 <body>
-	<th:block layout:fragment="content">
-		<div class="container-fluid p-4">
-			<h1 class="h3 mb-2 text-gray-800">품질 관리 대시보드</h1>
-
-			<div class="row">
-				<div class="col-md-6 mb-4">
-					<div class="card shadow">
-						<div class="card-header py-3">
-							<h6 class="m-0 font-weight-bold text-primary">품질 검사 관리</h6>
-						</div>
-						<div class="card-body">
-							<div class="d-flex justify-content-between mb-3">
-								<div class="input-group" style="width: 30%;">
-									<input type="text" class="form-control" placeholder="품질 검사"
-										aria-label="Search">
-									<button class="btn btn-primary" type="button">검색</button>
-								</div>
-								<div>
-									<button class="btn btn-success" type="button"
-										data-toggle="modal" data-target="#inspectionModal">등록</button>
-									<button class="btn btn-danger" type="button">삭제</button>
-								</div>
-							</div>
-							<div class="table-responsive">
-								<table class="table table-bordered" id="dataTable1" width="100%"
-									cellspacing="0">
-									<thead>
-										<tr>
-											<th>유형번호</th>
-											<th>검사유형</th>
-											<th>세부항목</th>
-											<th>검사방법</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr th:each="item : ${inspectionItems}">
-											<td th:text="${item.itemId}"></td>
-											<td th:text="${item.itemName}"></td>
-											<td th:text="${item.inspectionType}"></td>
-											<td th:text="${item.inspectionMethod}"></td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-4">
-					<div class="card shadow">
-						<div class="card-header py-3">
-							<h6 class="m-0 font-weight-bold text-primary">검사 항목별 허용 공차
-								관리</h6>
-						</div>
-						<div class="card-body">
-							<div class="d-flex justify-content-between mb-3">
-								<div class="input-group" style="width: 30%;">
-									<input type="text" class="form-control" placeholder="검사 항목"
-										aria-label="Search">
-									<button class="btn btn-primary" type="button">검색</button>
-								</div>
-								<div>
-									<button class="btn btn-success" type="button"
-										data-toggle="modal" data-target="#standardModal">등록</button>
-									<button class="btn btn-danger" type="button">삭제</button>
-								</div>
-							</div>
-							<div class="table-responsive">
-								<table class="table table-bordered" id="dataTable2" width="100%"
-									cellspacing="0">
-									<thead>
-										<tr>
-											<th>항목번호</th>
-											<th>세부항목</th>
-											<th>허용 공차</th>
-											<th>단위</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr th:each="item : ${inspectionItems}">
-											<td th:text="${item.itemId}"></td>
-											<td th:text="${item.inspectionType}"></td>
-											<td th:text="${item.itemName}"></td>
-											<td th:text="${item.toleranceValue}"></td>
-											<td th:text="${item.unit}"></td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
+<th:block layout:fragment="content">
+    <div class="container-fluid p-4">
+        <h1 class="h3 mb-2 text-gray-800">품질 관리 대시보드</h1>
+        
+        <div class="row">
+			<div class="col-md-6 mb-4">
+			    <div class="card shadow">
+			        <div class="card-header py-3">
+			            <h6 class="m-0 font-weight-bold text-primary">검사 유형별 기준 관리</h6>
+			        </div>
+			        <div class="card-body">
+			            <div class="table-responsive">
+			                <table class="table table-bordered" id="dataTable1" width="100%" cellspacing="0">
+			                    <thead>
+			                        <tr>
+			                            <th>기준ID</th>
+			                            <th>검사유형</th>
+			                            <th>세부항목</th>
+			                            <th>검사방법</th>
+			                        </tr>
+			                    </thead>
+			                    <tbody>
+			                        <tr th:each="fm : ${inspectionFMs}">
+			                            <td th:text="${fm.inspectionFMId}"></td>
+			                            <td th:text="${fm.inspectionType}"></td>
+			                            <td th:text="${fm.itemName}"></td>
+			                            <td th:text="${fm.methodName}"></td>
+			                        </tr>
+			                    </tbody>
+			                </table>
+			            </div>
+			        </div>
+			    </div>
 			</div>
-		</div>
 
-		<div class="modal fade" id="inspectionModal" tabindex="-1"
-			aria-labelledby="inspectionModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="inspectionModalLabel">품질 검사 항목 등록</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<form id="inspection-form">
-							<div class="mb-3">
-								<label for="inspectionName" class="form-label">품질 검사명</label> <input
-									type="text" class="form-control" id="inspectionName"
-									name="itemName">
-							</div>
-							<div class="mb-3">
-								<label for="inspectionType" class="form-label">검사타입</label> <input
-									type="text" class="form-control" id="inspectionType"
-									name="inspectionType">
-							</div>
-							<div class="mb-3">
-								<label for="inspectionMethod" class="form-label">검사방법</label> <input
-									type="text" class="form-control" id="inspectionMethod"
-									name="inspectionMethod">
-							</div>
-						</form>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary"
-							data-bs-dismiss="modal">닫기</button>
-						<button type="button" class="btn btn-primary"
-							id="saveInspectionBtn">저장</button>
-					</div>
-				</div>
-			</div>
-		</div>
+            <div class="col-md-6 mb-4">
+                <div class="card shadow">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">검사 항목별 허용 공차 관리</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between mb-3">
+                            <div class="input-group" style="width: 30%;">
+                                <input type="text" class="form-control" placeholder="검사 항목" aria-label="Search">
+                                <button class="btn btn-primary" type="button">검색</button>
+                            </div>
+                            <div>
+                                <button class="btn btn-success" type="button" data-toggle="modal" data-target="#standardModal">등록</button>
+                                <button class="btn btn-danger" type="button">삭제</button>
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable2" width="100%" cellspacing="0">
+                                <thead>
+                                    <tr>
+                                        <th>항목번호</th>
+                                        <th>세부항목</th>
+                                        <th>허용 공차</th>
+                                        <th>단위</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="item : ${inspectionItems}">
+                                        <td th:text="${item.itemId}"></td>
+                                        <td th:text="${item.itemName}"></td>
+                                        <td th:text="${item.toleranceValue}"></td>
+                                        <td th:text="${item.unit}"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="modal fade" id="inspectionModal" tabindex="-1" role="dialog" aria-labelledby="inspectionModalLabel" aria-hidden="true">
+	    <div class="modal-dialog" role="document">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <h5 class="modal-title" id="inspectionModalLabel">검사 유형별 기준 등록</h5>
+	                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+	                    <span aria-hidden="true">×</span>
+	                </button>
+	            </div>
+	            <div class="modal-body">
+	                <form id="record-form">
+	                    <div class="mb-3">
+	                        <label for="inspectionTypeId" class="form-label">검사 유형</label>
+	                        <select class="form-control" id="inspectionTypeId" name="inspectionTypeId">
+	                            <option value="">선택</option>
+	                            <option th:each="type : ${qcTypes}" th:value="${type.comDtId}" th:text="${type.comDtNm}"></option>
+	                        </select>
+	                    </div>
+	                    <div class="mb-3">
+	                        <label for="itemName_record" class="form-label">세부 항목</label>
+	                        <input type="text" class="form-control" id="itemName_record" name="itemName">
+	                    </div>
+	                    <div class="mb-3">
+	                        <label for="methodName" class="form-label">검사 방법</label>
+	                        <input type="text" class="form-control" id="methodName" name="methodName">
+	                    </div>
+	                </form>
+	            </div>
+	            <div class="modal-footer">
+	                <button class="btn btn-secondary" type="button" data-dismiss="modal">닫기</button>
+	                <button class="btn btn-primary" id="saveRecordBtn">저장</button>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+    
+	<div class="modal fade" id="standardModal" tabindex="-1" role="dialog" aria-labelledby="standardModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="standardModalLabel">검사 항목 등록 및 공차 설정</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="item-form">
+                        <div class="mb-3">
+                            <label for="itemName" class="form-label">항목명</label>
+                            <input type="text" class="form-control" id="itemName" name="itemName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="toleranceValue" class="form-label">허용 공차</label>
+                            <input type="number" class="form-control" id="toleranceValue" name="toleranceValue">
+                        </div>
+                        <div class="mb-3">
+                            <label for="unit" class="form-label">단위</label>
+                            <input type="text" class="form-control" id="unit" name="unit">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">닫기</button>
+                    <button class="btn btn-primary" id="saveItemBtn">저장</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 
-		<div class="modal fade" id="standardModal" tabindex="-1"
-			aria-labelledby="standardModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="standardModalLabel">허용 공차 등록</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<form id="standard-form">
-							<div class="mb-3">
-								<label for="itemId" class="form-label">검사 항목 선택</label> <select
-									class="form-control" id="itemId" name="itemId">
-								</select>
-							</div>
-							<div class="mb-3">
-								<label for="toleranceValue" class="form-label">허용 공차</label> <input
-									type="number" class="form-control" id="toleranceValue"
-									name="toleranceValue">
-							</div>
-							<div class="mb-3">
-								<label for="unit" class="form-label">단위</label> <input
-									type="text" class="form-control" id="unit" name="unit">
-							</div>
-						</form>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary"
-							data-bs-dismiss="modal">닫기</button>
-						<button type="button" class="btn btn-primary" id="saveStandardBtn">저장</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</th:block>
+<th:block layout:fragment="script">
+	<script th:inline="javascript">
+		// CSRF 토큰
+	    const token = document.querySelector('meta[name="_csrf"]').content;
+	    const header = document.querySelector('meta[name="_csrf_header"]').content;
 
-	<th:block layout:fragment="script">
-		<script th:inline="javascript">
-        // 품질 검사 등록 모달의 '저장' 버튼 클릭 이벤트
-        document.getElementById('saveInspectionBtn').addEventListener('click', function() {
-            const formData = {
-                itemName: document.getElementById('inspectionName').value,
-                inspectionType: document.getElementById('inspectionType').value,
-                inspectionMethod: document.getElementById('inspectionMethod').value
-            };
-
-            fetch('/api/quality/inspection-item/add', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(formData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('품질 검사 항목이 성공적으로 등록되었습니다.');
-                    window.location.reload();
-                } else {
-                    alert('등록 실패: ' + data.message);
+		// 왼쪽 모달 ('검사 유형별 기준 등록')의 '저장' 버튼 클릭 이벤트
+		document.getElementById('saveRecordBtn').addEventListener('click', function() {
+			const formData = {
+				inspectionType: document.getElementById('inspectionTypeId').value,
+				itemName: document.getElementById('itemName_record').value,
+				methodName: document.getElementById('methodName').value
+			};
+			        
+			fetch('/api/quality/fm', { // 새로운 API 경로 사용
+			    method: 'POST',
+			    headers: {
+					'Content-Type': 'application/json',
+					[header]: token
+				},
+			    body: JSON.stringify(formData)
+			})
+			.then(response => {
+				if (!response.ok) {
+                    throw new Error('Network response was not ok');
                 }
+				return response.json();
+			})
+			.then(data => {
+			    alert(data.message);
+			    if (data.success) {
+			        window.location.reload();
+			    }
+			})
+			.catch(error => {
+                console.error('Error:', error);
+                alert('등록 실패: 서버 연결 또는 응답 오류');
             });
-        });
+		});
 
-        // 허용 공차 등록 모달의 '저장' 버튼 클릭 이벤트
-        document.getElementById('saveStandardBtn').addEventListener('click', function() {
-            const formData = {
-                itemId: document.getElementById('itemId').value,
-                toleranceValue: document.getElementById('toleranceValue').value,
-                unit: document.getElementById('unit').value
-            };
-
-            fetch('/api/quality/standard/add', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(formData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('허용 공차가 성공적으로 등록되었습니다.');
-                    window.location.reload();
-                } else {
-                    alert('등록 실패: ' + data.message);
+		// 오른쪽 모달 ('검사 항목 등록 및 공차 설정')의 '저장' 버튼 클릭 이벤트
+		document.getElementById('saveItemBtn').addEventListener('click', function() {
+			const formData = {
+			    itemName: document.getElementById('itemName').value,
+			    toleranceValue: document.getElementById('toleranceValue').value,
+			    unit: document.getElementById('unit').value
+			};
+			        
+			fetch('/api/quality/item', { // API 경로를 'item'으로 변경
+			    method: 'POST',
+				headers: {
+					'Content-Type': 'application/json',
+					[header]: token
+				},
+			    body: JSON.stringify(formData)
+			})
+			.then(response => {
+				if (!response.ok) {
+                    throw new Error('Network response was not ok');
                 }
+				return response.json();
+			})
+			.then(data => {
+			    alert(data.message);
+			    if (data.success) {
+			        window.location.reload();
+			    }
+			})
+			.catch(error => {
+                console.error('Error:', error);
+                alert('등록 실패: 서버 연결 또는 응답 오류');
             });
-        });
-    </script>
-	</th:block>
+		});
+	</script>
+</th:block>
 </body>
 </html>
