--- a/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
+++ b/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
@@ -33,8 +33,8 @@
 
 /* 작업지시 테이블 */
 #work-orders table {
-  border-collapse: separate;
-  border-spacing: 0 10px; /* 위아래 8px 간격 */
+  	border-collapse: separate;
+  	border-spacing: 0 10px; /* 위아래 8px 간격 */
 }
 
 #work-orders thead th {
@@ -64,15 +64,34 @@
 /* 대시보드 영역 높이 */
 .dashboard {
     height: 300px;
-}	
+}
 
-/* 파이차트 */
+.box.dashboard {
+	display: flex;
+    align-items: center;
+    gap: 35px;
+}
+
 
 /* bom 모달 */
 #popModal .modal-dialog {
     max-width: 1000px;   /* 원하는 최대 너비 */
     width: 95%;           /* 화면 대비 비율 */
 }
+
+/* 재고요청 */
+#shortageList thead th {
+	background: #ffc107ba;
+    color: #343a40;
+}
+
+#shortageList tbody tr {
+	border: 1px solid #dee2e6;   /* 테두리 선 추가 */
+	box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+	border-radius: 8px;
+  	transition: all 0.2s ease; /* 부드러운 이동/색 변화 */
+}
+
 
 /* TUI Grid 안 체크박스 키우기 */
 .tui-grid-cell input[type="checkbox"] {
@@ -103,27 +122,76 @@
 
 
 #shortageList {
-	display: flex;
+	display: none; /* 처음에는 숨김 */
     height: 200px;
     align-items: baseline;
     gap: 30px;
     justify-content: space-between;
 }
 
-/* 숫자 패드 */
-#numPad {
-	border: 1px solid #ccc;
-    border-radius: 10px;
+#shortnumPad {
+	border-radius: 10px;
     padding: 10px;
+    background: #e3e1e1;
+    width: 175px;
+    height: 180px;
+    margin-bottom: 20px
 }
 
-.num-btn {
+.Snum-btn, #deleteBtn, #okBtn {
 	background: #fff;
-  	border: 1px solid #ccc;
   	border-radius: 8px;
   	font-size: 20px;
   	cursor: pointer;
   	transition: all 0.2s;
+  	width: 45px;
+  	height: 35px;
+  	border: none;
+}
+
+.Snum-btn:hover, #deleteBtn:hover, #okBtn:hover {
+	background: #007bff;
+	color: #fff;
+	transform: translateY(-2px);
+	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.Snum-btn:active, #deleteBtn:active, #okBtn:active {
+	transform: translateY(1px);
+	box-shadow: none;
+}
+
+.shortQty-input {
+    border: 1px solid #ccc;
+    outline: none;
+    transition: all 0.2s;
+}
+
+/* 저장됨 느낌 클래스 */
+.shortQty-input.saved {
+    border-color: transparent;      /* 테두리 사라짐 */
+    color: #333;
+}
+
+/* 수정 모달 */
+#numPad {
+    border-radius: 10px;
+    padding: 10px;
+    background: #e3e1e1;
+    width: 250px;
+    height: 400px;
+    margin-bottom: 20px; 
+}
+
+.num-btn {
+	background: #fff;
+  	border-radius: 8px;
+  	font-size: 20px;
+  	cursor: pointer;
+  	transition: all 0.2s;
+  	width: 70px;
+  	height: 70px;
+  	border: none;
 }
 
 .num-btn:hover {
@@ -138,4 +206,21 @@
 	box-shadow: none;
 }
 
+.qty-inputs .input-group {
+    margin-bottom: 10px;
+}
+
+.qty-inputs label {
+    font-weight: bold;
+}
+
+.qty-inputs input {
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 20px;
+}
+
+
+/*  */
 
