--- a/erp_mes/src/main/resources/static/business/css/order.css
+++ b/erp_mes/src/main/resources/static/business/css/order.css
@@ -92,3 +92,11 @@ body {
     background-color: #fff !important;
     border-bottom: 2px solid #dee2e6 !important; /* 하단 테두리 */
 }
+
+
+
+/* 2. TUI Grid 행에 마우스를 올렸을 때 배경색 변경 */
+.tui-grid-row-hover {
+    background-color: #f0f0f0 !important;
+    cursor: pointer;
+}
