등록 완성 (세부 수정 필요)09-16

--- a/erp_mes/src/main/resources/templates/plant/process-newForm.html
+++ b/erp_mes/src/main/resources/templates/plant/process-newForm.html
@@ -122,8 +122,9 @@
  		
  		const formData = $('#processForm').serialize();
  		$.post('/plant/processAdd', formData, function(response){
- 			
+ 			window.opener.location.reload();
  			alert('공정 정보를 추가합니다');
+ 			window.close();
  			
  		}).fail(function(){
  			alert('전송 오류가 발생 했습니다.');
