--- a/erp_mes/src/main/resources/templates/plant/process.html
+++ b/erp_mes/src/main/resources/templates/plant/process.html
@@ -59,7 +59,7 @@
           scrollX: false,
           scrollY: false,
           columns: [
-            { header: '공정코드', name: 'proId' },	
+            { header: '공정번호', name: 'proId' },	
             { header: '공정명', name: 'proNm' },	
             { header: '공정 타입', name: 'typeNm' },
             { header: '공정 설명', name: 'note' },
