--- a/erp_mes/src/main/resources/templates/qc/qcinfo.html
+++ b/erp_mes/src/main/resources/templates/qc/qcinfo.html
@@ -94,7 +94,7 @@
 									<thead>
 										<tr>
 											<th>기준ID</th>
-											<th>제품번호</th>
+											<th>제품이름</th>
 											<th>검사유형</th>
 											<th>세부항목</th>
 											<th>허용 공차</th>
@@ -105,7 +105,7 @@
 										<tr th:each="item : ${inspectionItems}"
 											th:data-id="${item.itemId}">
 											<td th:text="${item.itemId}"></td>
-											<td th:text="${item.productId}"></td>
+											<td th:text="${item.productName}"></td>
 											<td th:text="${item.inspectionType}"></td>
 											<td th:text="${item.itemName}"></td>
 											<td th:text="${item.toleranceValue}"></td>
