--- a/erp_mes/src/main/resources/templates/qc/qcinfo.html
+++ b/erp_mes/src/main/resources/templates/qc/qcinfo.html
@@ -198,9 +198,8 @@
 							</div>
 
 							<div class="mb-3">
-								<label for="toleranceValue" class="form-label">허용 공차</label> <input
-									type="number" class="form-control" id="toleranceValue"
-									name="toleranceValue">
+								<label for="toleranceValue" class="form-label">허용 공차</label>
+								<input type="number" step="0.01" class="form-control" id="toleranceValue" name="toleranceValue">
 							</div>
 
 							<div class="mb-3">
