--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -208,9 +208,7 @@
 					aria-labelledby="headingPages" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">검사 관리:</h6>
-						<a class="collapse-item" th:href="@{/quality/iqc}">수입 검사</a> <a
-							class="collapse-item" th:href="@{/quality/iqc}">공정 검사</a> <a
-							class="collapse-item" th:href="@{/quality/iqc}">포장 검사</a>
+						<a class="collapse-item" th:href="@{/quality/iqc}">품질검사 이력관리</a>
 						<h6 class="collapse-header">불량 관리:</h6>
 						<a class="collapse-item" th:href="@{/schedule}">불량 관리</a> <a
 							class="collapse-item" th:href="@{/schedule}">분석 리포트</a>
